# MAISECONDBRAIN

./: .dockerignore  .gitignore  .mcp.json  .railwayignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.example.yaml  deploy.json  manifest.json  pyproject.toml  run_daily_enrich.vbs  start-mnemo-api.ps1
.github/workflows/: obsidian-release.yml  pypi-publish.yml
benchmarks/: baseline.json
blog/drafts/: 2026-04-14-building-mnemo-in-public-1-en.md  2026-04-14-building-mnemo-in-public-1-ko.md  2026-04-29-building-mnemo-in-public-2-en.md  2026-04-29-building-mnemo-in-public-2-ko.md
docs/: A001-PRD.md  A002-경쟁분석.md  A003-기술분석.md  A004-수익화-전략.md  D001-아키텍처-설계.md  D002-온톨로지-스키마.md  D003-노드링크-설계.md  D004-lineage-semantics.md  I001-개발계획.md  OBSIDIAN-PLUGIN-RELEASE.md  P001-graph-improvement-plan.md  README.md  T001-MAIBOT-통합-테스트-리포트.md  T002-종합검증-리포트.md  T003-graph-quality-analysis.md  T004-frontmatter-enrichment.md  T005-embedding-coverage.md  T006-post-refactor-enrichment.md  T007-project-scoring.md  T008-search-quality.md  T009-graph-quality-improvement.md  auto-sync-architecture.md  lessons-learned-railway-pg-networking.md
docs/blog/: 2026-03-14_mnemo-devlog-01.md  2026-03-14_mnemo-devlog-01_KR.body.html  2026-03-14_mnemo-devlog-01_KR.md  2026-03-14_mnemo-devlog-02.md  2026-03-14_mnemo-devlog-02_KR.body.html  2026-03-14_mnemo-devlog-02_KR.md  2026-03-14_mnemo-devlog-02_KR.md.body.md  2026-03-27_mnemo-devlog-03.body.html  2026-03-27_mnemo-devlog-03.md  2026-03-27_mnemo-devlog-03_KR.body.html  2026-03-27_mnemo-devlog-03_KR.md  BLOG_STRATEGY.md  TISTORY_REPRESENTATIVE_IMAGE_STRATEGY.md
obsidian-plugin/: README.md  esbuild.config.mjs  eslint-errors.txt  eslint.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: api-client.ts  graph-view.ts  main.ts  search-modal.ts  settings.ts
scripts/: _fix_fstring.py  analyze_components.py  analyze_vault.py  benchmark_search.py  check_missing.py  classify_unknown.py  cleanup_person_stubs.py  collect_knowledge.py  content_enrich.py  daily_enrich.py  debug_search.py  embed_vault.py  embedding_ab_test.py  enrich_apply.py  enrich_plan.py  enrich_related.py  extract_persons.py  generate_stubs.py  integrated_search.py  migrate_to_pg.py  nightly_ingest.py  normalize_ontology_metadata.py  opportunity_scanner.py  reduce_components.py  search.py  search_ab_test.py  sync_dashboard_decisions.py  sync_dashboards_from_stats.py  sync_to_server.py  test_hybrid.py  test_query.py
src/mnemo/: __init__.py  api.py  cache.py  cli.py  content_linker.py  db.py  embedder.py  enricher.py  graph_builder.py  graph_search.py  graphrag.py  hybrid_search.py  lineage.py  ontology.py  ontology_shapes.py  opportunity_scorer.py  parser.py  query_classifier.py  reranker.py  vector_search.py
src/mnemo/collectors/: __init__.py  knowledge_pipeline.py  trust_evaluator.py  web_collector.py
src/mnemo/parsers/: __init__.py  docx.py  hwp.py  markdown.py  pdf.py  pptx.py  txt.py  xlsx.py
tests/: test_graphrag_llm.py  test_lineage_api.py  test_lineage_enhanced.py  test_normalize_ontology_metadata.py  test_ontology_shapes.py  test_parsers.py  test_regression_guard.py  test_shacl_advanced.py
~/vault/03.RESOURCES/스텁/: 00.MAIBOT__DASHBOARD.md  00.MAIBOT__DASHBOARD_.md  03.MAIAX__DASHBOARD_.md  04.MAIOSS__DASHBOARD.md  04.MAIOSS__DASHBOARD_.md  07.MAIBEAUTY__DASHBOARD.md  07.MAIBEAUTY__DASHBOARD_.md  08.MAISTAR7.md  09.MAICON_MAICON 프로젝트.md  09.MAICON__DASHBOARD_.md  10.MAITUTOR__DASHBOARD_.md  11.MAIBOTALKS__DASHBOARD_.md  Chatbot UI_br__설명·권고.md  Dashboard UI_br__그래프·제어패널.md  Mermaid 사이즈조정.md  P3. AI 분석_권고.md  RAG_SOP Service.md
