[project]
name = "mnemo"
version = "0.1.0"
description = "개인화 세컨드브레인 — 온톨로지 지식그래프 + GraphRAG + Obsidian"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
embeddings = ["openai>=1.0"]
local = ["ollama>=0.1"]
sbert = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
mnemo = "mnemo.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
