[project]
name = "mnemo-secondbrain"
version = "0.2.1"
description = "Personal knowledge graph system for Obsidian vaults with hybrid search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "jini92", email = "jini92@users.noreply.github.com"}]
keywords = ["knowledge-graph", "obsidian", "second-brain", "graphrag", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
embeddings = ["openai>=1.0"]
local = ["ollama>=0.1"]
sbert = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "build"]
all = [
    "openai>=1.0",
    "sentence-transformers>=2.2",
]

[project.urls]
Homepage = "https://github.com/jini92/MAISECONDBRAIN"
Repository = "https://github.com/jini92/MAISECONDBRAIN"
Issues = "https://github.com/jini92/MAISECONDBRAIN/issues"

[project.scripts]
mnemo = "mnemo.cli:main"
mnemo-server = "mnemo.cli:server_main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
